--- a/airtok-pod.html
+++ b/airtok-pod.html
@@ -86,6 +86,24 @@
 </body>
 <script src="./js/blazy.js"></script>
 <script>
+    // rem.js
+    (function (doc, win) {
+        var docEl = doc.documentElement,
+            resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+            recalc = function () {
+                var clientWidth = docEl.clientWidth;
+                if (!clientWidth) return;
+                if (clientWidth <= 750) {
+                    docEl.style.fontSize = 75 * (clientWidth / 750) + 'px';
+                } else {
+                    docEl.style.fontSize = '15px';
+                }
+            };
+        if (!doc.addEventListener) return;
+        win.addEventListener(resizeEvt, recalc, false);
+        doc.addEventListener('DOMContentLoaded', recalc, false);
+    })(document, window);
+
     window.onload = function () {
         var bLazy = new Blazy({
             offset: 10,
